--- a/Hands on1.html
+++ b/Hands on1.html
@@ -11,7 +11,7 @@
     <center>Stand Alone Senior High School</center>
   </h1>
      <hr>
-      <center><font><a href="">HOME</a>&nbsp&nbsp&nbsp&nbsp<a href="">GALLERY</a></font>
+      <center><font><a href="HO-3.html">GALLERY</a>&nbsp&nbsp&nbsp&nbsp<a href=""></a></font>
       <hr color="black"><size="arial" width="30%">
         </hr>
         <center><img src="/storage/emulated/0/Documents/zedrick/pci1.jpeg" sizes="30%" width="30%"> &nbsp&nbsp<img src="/storage/emulated/0/documents/zedrick/pci2.jpeg" sizes="30%" width="30%"> &nbsp&nbsp <img src="/storage/emulated/0/Documents/zedrick/pci3.jpeg" sizes="30%" width="30%">
